live and code buttons on mobile fixed

--- a/src/App.css
+++ b/src/App.css
@@ -289,6 +289,13 @@ font-size: 1rem;
 }
 @media only screen and (max-width: 1024px) {
 
+  .live-buttons{
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 2%;
+    margin-top: 0%;
+
+  }
 
   .resume-head {
     margin: 1.5rem;
